--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.squareup.okhttp:okhttp:2.5.0'
     compile 'com.koushikdutta.ion:ion:2.+'
+    compile 'com.jaredrummler:material-spinner:1.2.5'
+    compile 'com.android.support:cardview-v7:24.1.1'
     testCompile 'junit:junit:4.12'
 }
